--- a/src/components/members/card.css
+++ b/src/components/members/card.css
@@ -3,6 +3,7 @@
     margin: 30px;
     border-radius: 10px;
     width: 190px;
+    max-width: 45vw;
     min-width: fit-content; 
 }
 .child-album>h3{
@@ -16,10 +17,8 @@
 }
 .overlay{
     z-index: 1;
-    min-width: 180px;
     min-height: 180px; 
-    max-width: 180px;
-    max-height: 180px;   
+    width: 180px;   
     margin: 5px;
     border-radius: 10px;
 }
@@ -34,12 +33,16 @@
 }
 @media screen and (max-width: 700px) and (min-width: 100px){
     .child-album{
-        margin: 9px;
+        width: 45vw;
+        margin: 4px 0px;
+    }
+    .overlay{
+        width: 45vw;
     }
     
 }
-@media screen and (max-width: 100px) {
+/* @media screen and (max-width: 100px) {
     .child-album{
-        margin: 9px;
+        margin: 0px;
     }
-}
+} */
